[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy._Backend"

[project]
name = "tracellm"
version = "0.1.0"
description = "Lightweight LLM API call tracker — decorator-based observability for LLM calls"
readme = "README.md"
authors = [
    {name = "tracellm contributors", email = "hello@tracellm.dev"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "observability", "tracking", "ai", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/tracellm"
Repository = "https://github.com/yourusername/tracellm"
Documentation = "https://github.com/yourusername/tracellm#readme"
